Improved chat box. - Made it a div - Entered each message as a span - Style'd the div so it is a fixed size, scrolls on overflow - Periodically scroll to the bottom of the chat box (not perfect but OK)

--- a/src/webapps/hot_pot/static/css/room.css
+++ b/src/webapps/hot_pot/static/css/room.css
@@ -1,135 +1,141 @@
 html,
-
 body {
-  background: #EDEDED;
-  font-family: Arial, serif;
+    background: #EDEDED;
+    font-family: Arial, serif;
 
-  padding-left: 0px;
-  padding-right:0px;
-  font-weight: bold;
-  font-size: large;
+    padding-left: 0px;
+    padding-right: 0px;
+    font-weight: bold;
+    font-size: large;
 }
-p{margin:15px 0px;}
 
-a:hover, a:visited, a:link, a:active{
-  text-decoration: none;
-  color: inherit;
+p {
+    margin: 15px 0px;
 }
-.checkmark{
-    width : 30px,
+
+a:hover, a:visited, a:link, a:active {
+    text-decoration: none;
+    color: inherit;
+}
+
+.checkmark {
+    width: 30px,
     height: 30px,
 }
+
 .home_container {
-  height: 100%;
-  width:100%;
-  padding-left: 50px;
-  padding-left:50px;
-  padding-top: 35px;
+    height: 100%;
+    width: 100%;
+    padding-left: 50px;
+    padding-left: 50px;
+    padding-top: 35px;
 }
 
-.container{
-  
-  margin: 20px;
-}
-.btn{
-  z-index: 1;
-  width:100%;
-  color:black;
-  display: inline-block;
-  padding: .3em;
-/*  color: rgba(255,255,255,.68);*/
-  border: .075em solid #696969;
-}
-.notActive{
-      filter: grayscale(100%);
+.container {
+
+    margin: 20px;
 }
 
-.row{
-  width: 95%;
+.btn {
+    z-index: 1;
+    width: 100%;
+    color: black;
+    display: inline-block;
+    padding: .3em;
+    /*  color: rgba(255,255,255,.68);*/
+    border: .075em solid #696969;
 }
+
+.notActive {
+    filter: grayscale(100%);
+}
+
+.row {
+    width: 95%;
+}
+
 .row-card {
-  display: flex;
-  flex-wrap: wrap;
-  margin-top: 20px;
-  text-align: center;
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 20px;
+    text-align: center;
 }
 
 .row-card > div[class*='col-'] {
-  display: flex;
-}
-.intro{
-  align-items: center;
+    display: flex;
 }
 
-
+.intro {
+    align-items: center;
+}
 
 /* The popup form - hidden by default */
 .form-popup {
-  display: none;
-  position: absolute;
-  bottom: 10%;
-  right: 20%;
-  z-index: 100;
-  height: 80%;
-  width: 60%;
+    display: none;
+    position: absolute;
+    bottom: 10%;
+    right: 20%;
+    z-index: 100;
+    height: 80%;
+    width: 60%;
 }
 
 /* Add styles to the form container */
 .form-container {
 
-  padding: 20px;
-  background-color: white;
-  border-radius: 25px;
+    padding: 20px;
+    background-color: white;
+    border-radius: 25px;
 }
 
 /* Set a style for the submit/login button */
 .form-container .btn {
-  font-weight: bold;
-  font-size: large;
-  border: .075em solid #696969;
-  color: black;
-  padding: 16px 20px;
-  border: none;
-  cursor: pointer;
-  width: 100%;
-  margin-top:10px;
-  opacity: 0.8;
+    font-weight: bold;
+    font-size: large;
+    border: .075em solid #696969;
+    color: black;
+    padding: 16px 20px;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    margin-top: 10px;
+    opacity: 0.8;
 }
 
 /* Add a red background color to the cancel button */
 .form-container .create-room {
-  background-color: black;
-  color:white;
+    background-color: black;
+    color: white;
 }
 
 /* Add some hover effects to buttons */
 .form-container .btn:hover, .open-button:hover {
-  opacity: 1;
+    opacity: 1;
 }
 
 .sync span {
-  cursor: pointer;
-  display: inline-block;
-  position: relative;
-  transition: 0.5s;
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
 }
 
 .sync span:after {
-  content: '\00bb';
-  position: absolute;
-  opacity: 0;
-  top: 0;
-  right: -20px;
-  transition: 0.5s;
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 0.5s;
 }
 
 .sync:hover span {
-  padding-right: 25px;
+    padding-right: 25px;
 }
 
 .sync:hover span:after {
-  opacity: 1;
-  right: 0;
+    opacity: 1;
+    right: 0;
 }
 
 .btn-search {
@@ -139,31 +145,35 @@ a:hover, a:visited, a:link, a:active{
     border-width: 1px;
     border-style: solid;
     border-color: #1c1c1c;
-  }
-.btn-search:active, .btn-search:hover {
-  background: #1c1c1c;
-  color: #fff;
 }
+
+.btn-search:active, .btn-search:hover {
+    background: #1c1c1c;
+    color: #fff;
+}
+
 #map {
     padding-top: 500px;
     height: 80%;
-  }
-
-.edit{
-  width: 30%;
-}
-.poll_list{
-  overflow-y: scroll;
-  height:500px;
-}
-.video_col{
-  width:100%;
 }
 
-.dj_list{
-  margin-top: 2%;
-  overflow-y: scroll;
-  height: 240px;
+.edit {
+    width: 30%;
+}
+
+.poll_list {
+    overflow-y: scroll;
+    height: 500px;
+}
+
+.video_col {
+    width: 100%;
+}
+
+.dj_list {
+    margin-top: 2%;
+    overflow-y: scroll;
+    height: 240px;
 }
 
 /*
@@ -183,11 +193,12 @@ a:hover, a:visited, a:link, a:active{
 }
 */
 
-.search-result .close{
-  float: right;
+.search-result .close {
+    float: right;
 }
-.search-result .close:hover{
-  opacity: 1;
+
+.search-result .close:hover {
+    opacity: 1;
 }
 
 /*
@@ -205,73 +216,92 @@ a:hover, a:visited, a:link, a:active{
 */
 
 /*.people-chat #people{*/
-  /*display: inline-block;*/
-  /*width: 35%;*/
-  /*margin: auto;*/
+/*display: inline-block;*/
+/*width: 35%;*/
+/*margin: auto;*/
 /*}*/
 
 /*.people-chat #chat{*/
-  /*display: inline-block;*/
-  /*width: 45%;*/
-  /*margin: auto;*/
-  /*float:right;*/
+/*display: inline-block;*/
+/*width: 45%;*/
+/*margin: auto;*/
+/*float:right;*/
 /*}*/
 
 /*.people-chat #chat-log{*/
-  /*overflow-y: scroll;*/
+/*overflow-y: scroll;*/
 /*}*/
 /*.people-chat .user-in-room{*/
-  /*overflow-y: scroll;*/
-  /*min-height: 180px;*/
+/*overflow-y: scroll;*/
+/*min-height: 180px;*/
 /*}*/
 
 /*.chat{*/
-  /*border-radius: 10%;*/
-  /*position:absolute;*/
-  /*bottom:10%;*/
-  /*right: 0;*/
-  /*background: white;*/
-  /*box-shadow: 0px 5px 20px #dfdfdf;*/
+/*border-radius: 10%;*/
+/*position:absolute;*/
+/*bottom:10%;*/
+/*right: 0;*/
+/*background: white;*/
+/*box-shadow: 0px 5px 20px #dfdfdf;*/
 /*}*/
 
-.map{
-  border-radius: 10%;
-  position:absolute;
-  bottom:30%;
-  right: 0;
-  background: white;
-  box-shadow: 0px 5px 20px #dfdfdf;
+.map {
+    border-radius: 10%;
+    position: absolute;
+    bottom: 30%;
+    right: 0;
+    background: white;
+    box-shadow: 0px 5px 20px #dfdfdf;
 }
 
-.info-panel{
-  background-color: #757D75;
-  color: white;
-}
-.info-panel .info{
-  margin-left: 20px;
-  display: inline-block;
+.info-panel {
+    background-color: #757D75;
+    color: white;
 }
 
-.inline{
-  display: inline-block;
+.info-panel .info {
+    margin-left: 20px;
+    display: inline-block;
 }
 
-.header{
-  position: absolute;
-  top:0;
-  height:37%;
-  width: 100%;
+.inline {
+    display: inline-block;
 }
 
-.create{
-  position: absolute;
-  top: 25%;
-  right: 5%;
-  width: 40%;
-  z-index: 99;
+.header {
+    position: absolute;
+    top: 0;
+    height: 37%;
+    width: 100%;
 }
 
-.popular{
-  position: absolute;
-  top: 38%;
+.create {
+    position: absolute;
+    top: 25%;
+    right: 5%;
+    width: 40%;
+    z-index: 99;
+}
+
+.popular {
+    position: absolute;
+    top: 38%;
+}
+
+#chat-log {
+    text-align: left;
+    margin: 0 auto;
+    margin-bottom: 25px;
+    padding: 10px;
+    background: #fff;
+    height: 270px;
+    width: 100%;
+    border: 1px solid #ACD8F0;
+    overflow: auto;
+    word-wrap: break-word;
+    box-sizing: border-box;
+}
+
+.chat-msg {
+    font-weight: normal;
 }
